To new URL design

--- a/fg/page_action/groups.html
+++ b/fg/page_action/groups.html
@@ -8,7 +8,7 @@
 			
 			<div style="margin-bottom: 20px;margin-right: 20px;margin-left: 56px" ng-if="page.bg.group_mgr.groups.length">
 				
-				<site-validator style="width:55%;" ev="events" url="url" time="1750"> </site-validator>
+				<site-validator style="width:55%;" ev="events" url="url.name" time="1750"> </site-validator>
 					
 				<div style="float: right;margin-right: 30px">	
 
